Fixing CSS margins/padding and fixing scrollbars that should not be there

--- a/keck-escape-room/src/components/App.css
+++ b/keck-escape-room/src/components/App.css
@@ -2,18 +2,19 @@
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 .App {
   display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: auto auto auto;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: auto 1fr auto;
   margin: 0;
+  padding: 0;
   height: 100vh;
   width: 100vw;
   background-color: black;
   background-image: radial-gradient(rgba(0, 120, 0, 1), black 80%);
-  padding-top: 20px;
   font-size: large;
   color: white;
   font-family: "Press Start 2P";
@@ -23,6 +24,7 @@ body {
 #game-loader {
   grid-row: 1 / span 3;
   /* background-color: blue; */
+  padding-top: 20px;
 }
 
 /* Game content */
@@ -85,6 +87,7 @@ button:hover {
   grid-column: 3 / 3;
   margin: 0 0 0 10vw;
   font-size: small;
+  padding-top: 20px;
   padding-right: 0vw;
   width: 29vw;
 }
